syntax="proto3";

option go_package="auth_service/gen";

service Auth{
  rpc Register(RegisterRequest)returns(RegisterResponse);
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc RefreshToken(RefreshTokenRequest)returns(RefreshTokenResponse);
}

message RegisterRequest{
  string username=1;
  string password=2;
}
message RegisterResponse{
  int64 user_id=1;
}

message LoginRequest{
  string username=1;
  string password=2;
}
message LoginResponse{
  string accessToken=1;
  string refreshToken=2;
}

message RefreshTokenRequest{
  string refreshToken=1;
}
message RefreshTokenResponse{
  string accessToken=1;
  string refreshToken=2;
}